@@ -8,6 +8,8 @@ postgresql-common (200) UNRELEASED; urgency=medium
     database encoding, so switching encodings via dump-restore does not work
     anymore.
   * pg_upgradecluster: Deprecate 'replacement_sort_tuples' in version 11.
+  * pg_upgradecluster: Migrate postgresql.auto.conf to new cluster.
+    (Closes: #810615)
   * pg_ctlcluster: Die early if logfile is not available. (Closes: #891234)
   * pg_ctlcluster: Die early if pg_ctl cannot be found. (See: #918784)
   * pg_ctlcluster: Document --skip-systemctl-redirect, and skip redirect if
